--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
             <id>sdcf4j-repo</id>
             <url>http://repo.bastian-oppermann.de</url>
         </repository>
+        <repository>
+            <id>Sonatype Snapshots</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+        </repository>
+
     </repositories>
 
     <build>
@@ -66,10 +71,10 @@
 
     <dependencies>
         <dependency>
-            <groupId>de.btobastian.javacord</groupId>
+            <groupId>org.javacord</groupId>
             <artifactId>javacord</artifactId>
-            <version>2.0.16</version>
-            <classifier>shaded</classifier>
+            <version>3.0.0-SNAPSHOT</version>
+            <type>pom</type>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
